--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ authors = ["SidharthJoshi <<>>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 PyYAML = "^6.0"
+requests-oauthlib = "^1.3.1"
+PyPDF4 = "^1.27.0"
+tweepy = "^4.6.0"
 
 [tool.poetry.dev-dependencies]
 
