--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ PyYAML = "^6.0"
 requests-oauthlib = "^1.3.1"
 PyPDF4 = "^1.27.0"
 tweepy = "^4.6.0"
+pandas = "^1.4.1"
+beautifulsoup4 = "^4.10.0"
 
 [tool.poetry.dev-dependencies]
 
