--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ phonenumbers = "^8.12.46"
 timezonefinder = "^5.2.0"
 geopy = "^2.2.0"
 pytz = "^2022.1"
+pygame = "^2.1.2"
 
 [tool.poetry.dev-dependencies]
 
